# force-fastboot

./: .gitignore  .impeccable.md  AGENTS.md  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.codex/: hooks.json
.github/actions/setup/: action.yml
.github/workflows/: release-gui.yml  release.yml
crates/pawflash/: Cargo.toml
crates/pawflash-cli/: Cargo.toml
crates/pawflash-cli/src/: main.rs
crates/pawflash-cli/src/cli/: args.rs  device.rs  disable_vbmeta.rs  force_fastboot.rs  format_data.rs  gsi.rs  gsi_progress.rs  interactive.rs  mod.rs
crates/pawflash-cli/src/cli/flash/: mod.rs  raw.rs  scatter.rs
crates/pawflash-core/: Cargo.toml
crates/pawflash-core/src/: lib.rs
crates/pawflash-core/src/flash/: diagnostics.rs  error.rs  executor.rs  format.rs  mock.rs  mod.rs  results.rs  simulate.rs  sparse.rs  transport.rs
crates/pawflash-core/src/flash/executor/: connect.rs  flash.rs  manage.rs  mod.rs
crates/pawflash-core/src/flash/sparse/: chunked.rs  mod.rs  scan.rs
crates/pawflash-core/src/force_fastboot/: error.rs  fastboot.rs  permissions.rs  serial.rs  udev.rs
crates/pawflash-core/src/format/: generator.rs  mod.rs
crates/pawflash-core/src/gsi/: error.rs  flash.rs  mod.rs  product.rs  transition.rs  types.rs
crates/pawflash-core/src/output/: gsi_progress.rs  mod.rs  prompts.rs  spinner.rs  status.rs  tables.rs
crates/pawflash-core/src/scatter_parser/: error.rs  safety.rs  types.rs  util.rs
crates/pawflash-core/src/scatter_parser/parse/: helpers.rs  mod.rs  normalize.rs  xml.rs  yaml.rs
crates/pawflash-core/src/scatter_parser/plan/: mode.rs  slot.rs
crates/pawflash/src/: lib.rs  main.rs
crates/pawflash/src/cli/: args.rs  disable_vbmeta.rs  force_fastboot.rs  interactive.rs  mod.rs
crates/pawflash/src/cli/flash/: mod.rs  scatter.rs
docs/superpowers/plans/: 2026-07-19-rust-best-practices-refactor.md
plans/: 001-add-ci-test-and-lint.md  001-fix-sparse-wrap-file-truncation.md  002-set-package-root-block-traversal.md  002-update-readme-cli-docs.md  003-add-usb-device-confirmation.md  003-consolidate-safety-class-and-role.md  004-add-sudo-confirmation.md  004-split-cli-flash-rs.md  005-add-flash-execution-tests.md  005-split-plan-mod-rs.md  006-fix-i64-u64-sentinel-fallback.md  006-refactor-flashplanoptions-bools.md  007-consolidate-download-flash-cycle.md  007-extract-wiper-config.md  008-fix-tracing-format-strings.md  008-integration-tests-flash-pipeline.md  009-harden-scatter-path-resolution.md  009-simplify-gsi-dual-path-state-machine.md  010-deduplicate-sparse-chunk-loop.md  010-update-deprecated-dependencies.md  011-optimize-non-unix-scan-extents.md  011-wire-up-gsi-cancel-token.md  012-add-json-output-for-flash-results.md  README.md
src/: App.tsx  error.rs  fastboot.rs  index.css  lib.rs  main.rs  main.tsx  serial.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/cli/: args.rs  device.rs  disable_vbmeta.rs  flash.rs  flash_raw.rs  force_fastboot.rs  format_data.rs  gsi.rs  interactive.rs  mod.rs  scatter.rs
src/cli/flash/: mod.rs  raw.rs  scatter.rs
src/components/console/: ConsoleContext.tsx  ConsolePanel.tsx
src/components/layout/: AppLayout.tsx
src/components/tabs/: MainTab.tsx  SettingsTab.tsx  ToolsTab.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  confirm-dialog.tsx  dialog.tsx  label.tsx  select.tsx  separator.tsx  switch.tsx  tabs.tsx
src/flash/: error.rs  executor.rs  format.rs  mock.rs  mod.rs  results.rs  session.rs  sparse.rs  vbmeta.rs
src/force_fastboot/: error.rs  fastboot.rs  mod.rs  permissions.rs  serial.rs  udev.rs
src/format/: generator.rs
src/gsi/: flash.rs  mod.rs  types.rs
src/hooks/: useConsole.ts  useTauriEvent.ts
src/lib/: format.ts
src/output/: format_display.rs  gsi_progress.rs  mod.rs  prompts.rs  spinner.rs  status.rs  tables.rs  theme.rs
src/scatter_parser/: error.rs  mod.rs  parse.rs  path.rs  plan.rs  safety.rs  types.rs  util.rs
src/scatter_parser/parse/: helpers.rs  json.rs  mod.rs  xml.rs  yaml.rs
src/scatter_parser/plan/: action.rs  group.rs  image.rs  layout.rs  mod.rs  mode.rs  slot.rs
src/types/: api.ts  progress.ts
