[package]
name = "pawflash"
version = "0.1.0"
description = "MTK device flashing toolkit — force fastboot, parse scatters, plan flashes"
license = "GPL-3.0-or-later"
repository = "https://github.com/user/pawflash"
readme = "README.md"
keywords = ["fastboot", "mediatek", "preloader", "android", "scatter"]
categories = ["hardware-support", "command-line-utilities", "development-tools"]
edition = "2024"
rust-version = "1.85"
[lints.rust]

unused = "deny"
dead_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "deny"
cast_lossless = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
doc_markdown = "deny"
large_enum_variant = "deny"
missing_const_for_fn = "deny"
needless_pass_by_value = "deny"
redundant_clone = "deny"
perf = "deny"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
encoding_rs = "0.8"
indicatif = "0.17"
inquire = "0.7"
nusb = "0.2"
quick-xml = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tabled = { version = "0.18", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
fastboot-protocol = { path = "vendor/fastboot-rs/fastboot-protocol" }
android-sparse-image = { path = "vendor/fastboot-rs/android-sparse-image" }
tempfile = "3"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
