[workspace]
resolver = "2"
members = [
    "crates/pawflash-core",
    "crates/pawflash-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
description = "MTK device flashing toolkit — force fastboot, parse scatters, plan flashes"
license = "GPL-3.0-or-later"
repository = "https://github.com/user/pawflash"
readme = "README.md"
keywords = ["fastboot", "mediatek", "preloader", "android", "scatter"]
categories = ["hardware-support", "command-line-utilities", "development-tools"]
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unused = "deny"
dead_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "deny"
cast_lossless = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
doc_markdown = "deny"
large_enum_variant = "deny"
missing_const_for_fn = "deny"
needless_pass_by_value = "deny"
redundant_clone = "deny"
perf = "deny"
