[package]
name = "pawflash-gui"
version = "0.1.0"
description = "pawflash desktop GUI"
authors = ["you"]
edition.workspace = true
license = "GPL-3.0-or-later"
repository = "https://github.com/user/pawflash"
readme = "../README.md"
keywords = ["fastboot", "mediatek", "tauri"]
categories = ["hardware-support", "development-tools"]

[lib]
name = "pawflash_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pawflash-core = { path = "../crates/pawflash-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
