[package]
name = "pawflash"
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
pawflash-core = { path = "../pawflash-core" }
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
inquire = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
